--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,84 @@
       src: url(fonts/Roboto-Thin.ttf);
     }
 
+    @font-face
+    {
+      font-family: white-rabbit;
+      src: url(fonts/whitrabt.ttf);
+    }
+
+    @font-face
+    {
+      font-family: vector-waves;
+      src: url("fonts/Vector Waves.ttf");
+    }
+
+    @font-face
+    {
+      font-family: octagonal-ultra-light;
+      src: url("fonts/octaul-017.ttf");
+    }
+
+    @font-face
+    {
+      font-family: octagonal-light;
+      src: url("fonts/octal-017.ttf");
+    }
+
+    @font-face
+    {
+      font-family: octagonal-regular;
+      src: url("fonts/octar-017.ttf");
+    }
+
+    @font-face
+    {
+      font-family: octagonal-bold;
+      src: url("fonts/octal-017.ttf");
+    }
+
+    @font-face
+    {
+      font-family: hyperspace-bold-italic;
+      src: url("fonts/Hyperspace Bold Italic.otf");
+    }
+
+    @font-face
+    {
+      font-family: hyperspace-bold;
+      src: url("fonts/Hyperspace Bold.otf");
+    }
+
+    @font-face
+    {
+      font-family: hyperspace-italic;
+      src: url("fonts/Hyperspace Italic.otf");
+    }
+
+    @font-face
+    {
+      font-family: hyperspace;
+      src: url("fonts/Hyperspace.otf");
+    }
+
+    @font-face
+    {
+      font-family: geo-italic;
+      src: url("fonts/Geo-Italic.ttf");
+    }
+
+    @font-face
+    {
+      font-family: geo-regular;
+      src: url("fonts/Geo-Regular.ttf");
+    }
+
+    @font-face
+    {
+      font-family: electrolize-regular;
+      src: url("fonts/Electrolize-Regular.ttf");
+    }
+
     #blogger
     {
       margin: -2px;
@@ -86,10 +164,11 @@
 
     body
     {
-      font-family: roboto-light;
+      font-family: hyperspace;
       color: #00ff00;
       background-color: black;
       text-shadow: #00ff00 0px 0px 10px, #00ff00 0px 0px 10px;
+      letter-spacing: 1px;
     }
 
     #title
@@ -657,9 +736,11 @@
           <li>To compare several techs in a relative way so that each tech point no longer represents the
             exact number of jobs found but rather, the percentage of jobs out of the total for all the included
             techs, use the "Relative" switch on the top-right of the page.</li>
+          <li>To view techs in a Tech category click on a title marked by an "up chart" icon.</li>
+          <li>To view a stats summary for a tech category click on the "up chart" icon directly.</li>
           </ul>
 
-        <p>Also, Trend Buddy has only been tested on Chrome.</p>
+        <p>Also, Trend Buddy has been designed for Chrome only.</p>
 
         <p>Tech used to build this site includes VS Code, Eclipse, Javascript, Polymer, Firebase, Google App Engine, Node, and Java.</p>
 
