--- a/public/index.html
+++ b/public/index.html
@@ -467,11 +467,11 @@
         legend:
         {
           position: "top",
-          textStyle: { fontName: "roboto", fontSize: 14, color: "#00ff00" }
+          textStyle: { fontName: "hyperspace-bold", fontSize: 14, color: "#00ff00" }
         },
         animation: { startup: false, duration: 0, easing: 'linear', },
         interpolateNulls: true,
-        fontName: "roboto",
+        fontName: "roboto-light",
         fontSize: 9,
         backgroundColor: "#000000",
         vAxis:
