change to job woper name

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Trend Buddy</title>
+  <title>Job Woper</title>
 
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
@@ -719,13 +719,13 @@
       <app-header id="header" slot="header">
         <app-toolbar>
           <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-          <div id="title" main-title>Trend Buddy</div>
+          <div id="title" main-title>Job Woper</div>
           <paper-toggle-button id="rel_button">Relative</paper-toggle-button>
         </app-toolbar>
       </app-header>
 
       <div id="curve_chart">
-        <p>Every day, Trend Buddy takes note of the number of jobs posted demanding experience with various technologies.
+        <p>Every day, Job Woper takes note of the number of jobs posted demanding experience with various technologies.
         This, in turn, is used to generate comparative charts. 
         If, like me, you're an IT professional you might find this information helpful when determining which skills are worth pursuing. 
         Each chart, individually, is not overly useful but when combined with others can give us some insight into which technologies are in demand and which are on the way out.</p>
@@ -740,7 +740,7 @@
           <li>To view a stats summary for a tech category click on the "up chart" icon directly.</li>
           </ul>
 
-        <p>Also, Trend Buddy has been designed for Chrome only.</p>
+        <p>Also, Job Woper has been designed for Chrome only.</p>
 
         <p>Tech used to build this site includes VS Code, Eclipse, Javascript, Polymer, Firebase, Google App Engine, Node, and Java.</p>
 
