--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,27 @@
       letter-spacing: 1px;
     }
 
+    .btn
+    {
+      background-color: #000;
+      margin: 0px 10px 0px 0px;
+      font-family: hyperspace-bold;
+      padding: 5px 10px 5px 12px;
+      cursor: pointer;
+    }
+
+    .btn:enabled
+    {
+      color: #0f0;
+      border: 2px solid #0f0;
+    }
+
+    .btn:disabled
+    {
+      color: #888;
+      border: 2px solid #444;
+    }
+
     #title
     {
       font-size: 30px;
@@ -294,7 +315,7 @@
     window.onload = Main;
     function Main()
     {
-      var toggle_elem, menu_elem;
+      var toggle_elem, menu_elem, view_chart_elem;
 
       db = new Db();
       db.trace_hits = false;
@@ -311,6 +332,17 @@
 
       toggle_elem = document.getElementById("rel_button");
       toggle_elem.onclick = On_Relative_Click;
+
+      view_chart_elem = document.getElementById("view_chart_button");
+      view_chart_elem.onclick = On_View_Chart_Click;
+      view_chart_elem.disabled = true;
+    }
+
+    function On_View_Chart_Click()
+    {
+      Util.Hide(stats_elem);
+      Util.Show(curve_chart);
+      view_chart_button.disabled = true;
     }
 
     function On_Choose_Trend(event)
@@ -346,7 +378,8 @@
 
       Util.Hide(curve_chart);
       Util.Show(stats_elem);
-    }
+      view_chart_button.disabled = false;
+  }
 
     function On_Choose_Chart(event)
     {
@@ -381,6 +414,7 @@
 
       Util.Hide(stats_elem);
       Util.Show(curve_chart);
+      view_chart_button.disabled = true;
     }
 
     async function On_Relative_Click()
@@ -737,8 +771,8 @@
       <app-header id="header" slot="header">
         <app-toolbar>
           <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-          <div id="title" main-title>
-            <img src="images/favicon/apple-touch-icon.png">Job Woper</div>
+          <div id="title" main-title><img src="images/favicon/apple-touch-icon.png">Job Woper</div>
+          <button id="view_chart_button" class="btn">View Chart</button>
           <paper-toggle-button id="rel_button">Relative</paper-toggle-button>
         </app-toolbar>
       </app-header>
