--- a/public/index.html
+++ b/public/index.html
@@ -417,7 +417,7 @@
       view_chart_button.disabled = true;
     }
 
-    async function On_Relative_Click()
+    function On_Relative_Click()
     {
       if (Charts_Displayed(chart_data) < 2 && Is_Relative_Chart())
       {
